[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/mace.png" type="Texture" id=1]
[ext_resource path="res://scripts/meleeTemplate.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.69945, 5.93333 )

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.22222, 5.15121 )

[node name="mace" type="Node2D"]
script = ExtResource( 3 )
weaponCooldown = 5.0

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 1.00474, 0.785457 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 9.84163, 0 )
scale = Vector2( 12, 11.975 )
shape = SubResource( 1 )

[node name="shootCooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/swing = SubResource( 2 )

[node name="anchor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="anchor"]
visible = false
position = Vector2( 65, 0 )
scale = Vector2( 3, 3 )
z_index = 1
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 1

[node name="SpriteArea2D" type="Area2D" parent="anchor/Sprite"]
collision_layer = 3
collision_mask = 3
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="anchor/Sprite/SpriteArea2D"]
position = Vector2( -1, -0.500001 )
scale = Vector2( 3, 3.009 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="shootCooldown" to="." method="_on_shootCooldown_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="anchor/Sprite/SpriteArea2D" to="." method="_on_SpriteArea2D_body_entered"]
